--- a/style.css
+++ b/style.css
@@ -12,9 +12,15 @@ margin: 0;
 margin: 1em;
   }
 
-.info p{
+.info h4{
   font-family: sans-serif;
-  font-size: 15px;
+  font-size: 20px;
   letter-spacing: 0.1px;
   line-height: 22px;
 }
+ .info p{
+   font-family: sans-serif;
+   font-size: 13px;
+   letter-spacing: 0.1px;
+   line-height: 15px;
+ }
