--- a/style.css
+++ b/style.css
@@ -32,3 +32,21 @@ margin: 1em;
    margin-left: 5em;
    border-radius: 45%;
  }
+/* front-end-projects                                 */
+
+ .front-end {
+margin: 1em;
+ }
+
+ .front-end p{
+   font-family: sans-serif;
+   font-size: 13px;
+   letter-spacing: 0.1px;
+   line-height: 15px;
+ }
+ .front-end h4{
+   font-family: sans-serif;
+   font-size: 20px;
+   letter-spacing: 0.1px;
+   line-height: 22px;
+ }
